[project]
name = "pvs6"
version = "2026.02.28.01"
description = "PVS6 Prometheus Exporter"
authors = [
    {name = "CK", email = "ckim@duck.com"},
]
dependencies = ["pypvs>=0.2.7", "requests>=2.32.5", "prometheus-client>=0.24.1", "aiohttp>=3.13.3", "zeroconf>=0.148.0", "python-dotenv>=1.2.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "UNLICENSE"}


[tool.pdm]
distribution = false
